portfolio deployment changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<link href="css/main.css" rel="stylesheet" >
 	
-	<title>Portfolio</title>
+	<title>Jayson Durante - Portfolio</title>
 	<style>
 		.bgimg-1 {
 		  background-image: url("img/parallax/img_parallax.jpg");
